Fixed audio playing and icon not showing issue along with minor improvements across all pages

--- a/CSS file/library.css
+++ b/CSS file/library.css
@@ -38,6 +38,9 @@
 #error-page img {
     margin-bottom: 2rem;
 }
+.detail-card:hover > .img-over > svg, .detail-card:hover > .add {
+    display: block;
+}
 /* .big-detail {
     display: flex;
     flex-direction: row;
