--- a/CSS file/player.css
+++ b/CSS file/player.css
@@ -58,23 +58,25 @@
   flex-direction: column;
 }
 .meta {
-  /* position: relative; */
-  margin-top: -1.7rem;
+  position: absolute;
+  bottom: 0rem;
   height: 6rem;
   gap: 1.25rem;
+  left: 15rem;
   display: flex;
 }
 .extra {
   display: flex;
-  /* position: fixed; */
+  position: fixed;
   height: 3rem;
   bottom: 1.5rem;
-  left: 50%;
+  left: 60%;
   fill: white;
   gap: 7rem;
+  min-width: 40%;
 }
 #player-name {
-  max-width: 17rem;
+  max-width:  30rem;
   overflow-x: hidden;
   overflow-y: hidden;
   -webkit-overflow-scrolling: hidden;
@@ -87,11 +89,11 @@
 }
 .cont-1 {
   display: flex;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 .cont-2 {
   display: flex;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 .l1 {
     position: relative;
@@ -116,26 +118,38 @@
     .cont-1 {
         display: none;
     }
+    .extra {
+      left: 75%;
+    }
+    #player-name {
+      max-width: 25rem;
+    }
 }
 @media screen and ( max-width: 900px ) {
     .cont-2 {
         display: none;
     }
     .extra {
-        left: 75%
+        left: 35rem
     }
     .meta {
-        left: 45%
+        left: 35%
     }
+    #player-name {
+      max-width: 20rem;
+    }    
 }
 @media screen and ( max-width: 700px) {
     .cont-1{
         display: none;
     }
     .extra {
-        left: 75%
+        left: 24rem;
     }
     .meta {
-        left: 50%;
+        left: 40%;
+    }
+    #player-name {
+      max-width: 10rem;
     }
 }
